--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
   /* imagen de fondo*/
   body{
-        background-color: #3a3939;
+        background-color: #363636;
        }
 /* Selector etiquetas h*/
 
@@ -39,11 +39,26 @@
    }
   
   h5{
-    color: white;
-    font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: right;
+         color: white;
+         font-size: 20px;
+         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+         text-align: right;
   }
+
+  h6{
+         color: white;
+         font-size: 18px;
+         font-family: cursive;
+  }
+
+  #titulo--especial{ 
+         color: white;
+         font-size: 18px;
+         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+         background-color: #3a3939;
+
+  }
+
  /* Selector clase circular--square */
  .circular--square 
  {
@@ -169,4 +184,102 @@ progress::-webkit-progress-value
    background-color: rgb(255, 174, 0);
    
  }
- 
+ /* botón RESULTADOS */
+ 	
+#main-container{
+  
+  text-align: center;
+  font-family: Arial;
+  }
+
+.btn{
+  border-radius: 50px;
+  font-size: 20px;
+  color: rgba(0,0,0,0.75);
+  display: inline-block;
+  background-color: rgb(255, 174, 0);
+  padding: 15px 15px;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.3); 
+}
+
+/*teclado*/
+
+
+/* botones W, A y S */
+
+.contenedor-teclas {
+  width: 200px;
+  height: 200px;
+  margin-left: 20px;
+}
+
+.boton-w {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 110px;
+  margin-left: 30px;
+}
+
+.boton-a-s {
+  display: flex;
+  width: 300px;
+  height: 100px;
+}
+
+/*ubicacion de las letras W, A y S*/
+
+.w-key, .a-key, .s-key, .d-key {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+  border: 3px solid #000;
+  border-radius: 10px;
+}
+
+/*separacion entre tecla a y s*/
+
+.s-key {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+
+
+
+
+/* setinterval */
+
+.contenedor{
+  height:100vh;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+}
+
+
+span{
+  font-style:none;
+  color:orange;
+  padding : 5px;
+  font-family: cursive;
+  font-size:1.8em;
+}
+
+.calcul{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+}
+
+
+input{
+  border:none;
+  padding:3px;
+}
